// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea with limit 5, 10 words 1`] = `
<div>
  <textarea
    className="under-50"
    name="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    value="1 2 3 4 5 6 7 8 9 10"
  />
  <span
    aria-live="polite"
    className="word-count-counter wordCount"
  >
    5 words too many
  </span>
</div>
`;

exports[`Textarea with limit 100, 10 words 1`] = `
<div>
  <textarea
    className="under-100"
    name="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    value="1 2 3 4 5 6 7 8 9 10"
  />
  <span
    aria-live="polite"
    className="word-count-counter wordCount"
  >
    90 words left
  </span>
</div>
`;

exports[`Textarea with limit 100, no words 1`] = `
<div>
  <textarea
    className="under-100"
    name="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
  />
  <span
    aria-live="polite"
    className="word-count-counter wordCount"
  >
    100 words left
  </span>
</div>
`;

exports[`Textarea with no words, no limit 1`] = `
<div>
  <textarea
    className=""
    name="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
  />
</div>
`;
